# double-track-browser

./: .editorconfig  .gitignore  .guix-channel  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSING.md  MAINTAINERS.md  META.scm  Mustfile.epx  PROJECT_SUMMARY.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  QUICKSTART.md  README.adoc  README.md  ROADMAP.adoc  RSR_ACHIEVEMENT.md  RSR_COMPLIANCE.adoc  RSR_COMPLIANCE_AUDIT.md  RSR_OUTLINE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  codemeta.json  deno.json  flake.nix  guix.scm  justfile  k9iser.toml  llm-warmup-dev.md  (+5 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  guix-nix-policy.yml  hypatia-scan.yml  jekyll-gh-pages.yml  makefile-blocker.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  rescript-deno-ci.yml  rsr-antipattern.yml  (+7 more)
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.well-known/: dc.xml  security.txt
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
icons/: README.md
rust_core/: Cargo.toml
rust_core/benches/: core_bench.rs
rust_core/src/: activity.rs  form_data.rs  interests.rs  lib.rs  profile.rs  schedule.rs
rust_core/tests/: aspect_test.rs  e2e_test.rs  integration_tests.rs  property_test.rs
scripts/: build.ts
src/: manifest.json
(+86 files in other folders)
